@@ -1,18 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
-    <groupId>net.oneandone.stool</groupId>
-    <artifactId>stool</artifactId>
-    <version>5.0.0-SNAPSHOT</version>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.2.0.M1</version>
+    <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
   <name>Stool Server</name>
+  <groupId>net.oneandone.stool</groupId>
   <artifactId>server</artifactId>
   <packaging>jar</packaging>
   <description>Stool's server component.</description>
 
+  <properties>
+    <java.version>1.8</java.version>
+  </properties>
+
   <dependencies>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+
     <dependency>
       <groupId>net.oneandone.stool</groupId>
       <artifactId>common</artifactId>
@@ -65,6 +84,7 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+
   </dependencies>
 
   <build>
@@ -81,52 +101,41 @@
 
     <plugins>
       <plugin>
-        <groupId>net.oneandone.maven.plugins</groupId>
-        <artifactId>application</artifactId>
-        <version>1.6.2</version>
-        <executions>
-          <execution>
-            <id>stool-server</id>
-            <configuration>
-              <!-- JavaSetup is used as the setup tool *and* as the Jar file for the resulting stool installation. -->
-              <path>$PATH</path>
-              <options>-Djava.awt.headless=true</options>
-              <name>stool-server</name>
-              <main>net.oneandone.stool.server.cli.Main</main>
-              <equal>com/jcraft/jsch/agentproxy/*.class, org/aopalliance/**/*, META-INF/ASL2.0</equal>
-              <remove>META-INF/maven/**/*,
-                META-INF/pominfo.properties, META-INF/wsd.properties, META-INF/DEPENDENCIES, META-INF/LICENSE*, META-INF/NOTICE*,
-                META-INF/license.txt, META-INF/notice.txt, overview.html, META-INF/DUMMY.SF, META-INF/DUMMY.DSA, about.html,
-                readme.txt, changelog.txt, notice.txt, license.txt, licenses/*
-              </remove>
-              <concat>META-INF/sisu/javax.inject.Named, META-INF/services/org.apache.lucene.codecs.PostingsFormat, META-INF/spring.*</concat>
-              <attach>true</attach>
-              <extensions>
-                <extension>if [ -z $JAVA_MODULES ] ; then</extension>
-                <!-- auto-detect; see https://www.oracle.com/technetwork/java/javase/versioning-naming-139433.html -->
-                <!-- takes less than 1/10 of a second: -->
-                <extension>  export JAVA_VERSION=$(java -version 2&gt;&amp;1 | head -n 1 | cut -f 3 -d ' ' | cut -f 2 -d '"')</extension>
-                <extension>  # echo java ${JAVA_VERSION}</extension>
-                <extension>  case "$JAVA_VERSION" in</extension>
-                <extension>    "1."*) export JAVA_MODULES=false ;;</extension>
-                <extension>    *) export JAVA_MODULES=true ;;</extension>
-                <extension>  esac</extension>
-                <extension>fi</extension>
-                <extension>if [ "$JAVA_MODULES" != "false" ] ; then</extension>
-                <extension>  OPTIONS="--illegal-access=deny $OPTIONS"</extension>
-                <extension>fi</extension>
-              </extensions>
-
-              <!-- upload ... -->
-              <symlink>${env.CISOTOOLS_HOME}/bin/stool</symlink>
-              <target>${env.CISOTOOLS_HOME}/stool</target>
-            </configuration>
-            <goals>
-              <goal>generate</goal>
-            </goals>
-          </execution>
-        </executions>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
+
+  <!-- repositories>
+    <repository>
+      <id>spring-snapshots</id>
+      <name>Spring Snapshots</name>
+      <url>https://repo.spring.io/snapshot</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>spring-milestones</id>
+      <name>Spring Milestones</name>
+      <url>https://repo.spring.io/milestone</url>
+    </repository>
+  </repositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>spring-snapshots</id>
+      <name>Spring Snapshots</name>
+      <url>https://repo.spring.io/snapshot</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </pluginRepository>
+    <pluginRepository>
+      <id>spring-milestones</id>
+      <name>Spring Milestones</name>
+      <url>https://repo.spring.io/milestone</url>
+    </pluginRepository>
+  </pluginRepositories -->
+
 </project>
